[package]
name = "always-blue"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
slint = "1.15.1"

[features]
default = []
wasm = []

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
open = "5.0"
rodio = "0.17"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = {version = "0.2"}
getrandom = { version = "0.2.2", features = ["js"] }
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlAudioElement"
] }
js-sys = "0.3"

[build-dependencies]
slint-build = "1.15.1"

# WASM构建需要cdylib类型
[lib]
name = "always_blue_wasm"
path = "src/lib.rs"
crate-type = ["cdylib"]

# 优化WASM体积
[profile.release]
opt-level = "s"  # 优化体积而非速度
lto = true       # 链接时优化
debug = false    # 移除调试信息
panic = "abort"  # 使用abort而非unwind
codegen-units = 1 # 减少代码生成单元以提高优化效果

# WASM特定优化
[profile.release.package."*"]
opt-level = "s"
