[package]
name = "always-blue"
version = "0.1.0"
edition = "2021"

[features]
default = ["desktop"] #or wasm/desktop
desktop = ["open", "rodio"]
wasm = ["wasm-bindgen", "getrandom", "web-sys", "js-sys"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 公共依赖
rand = "0.8"
slint = "1.15.1"

# 桌面特性依赖
open = { version = "5.0", optional = true }
rodio = { version = "0.17", optional = true }

# WASM特性依赖
wasm-bindgen = { version = "0.2", optional = true }
getrandom = { version = "0.2.2", optional = true, features = ["js"] }
web-sys = { version = "0.3", optional = true, features = [
    "Window",
    "Document",
    "HtmlAudioElement",
    "console"
] }
js-sys = { version = "0.3", optional = true }

[build-dependencies]
slint-build = "1.15.1"

# WASM构建需要cdylib类型
[lib]
name = "always_blue_wasm"
path = "src/lib.rs"
crate-type = ["cdylib"]

# 优化WASM体积
[profile.release]
opt-level = "s"  # 优化体积而非速度
lto = true       # 链接时优化
debug = false    # 移除调试信息
panic = "abort"  # 使用abort而非unwind
codegen-units = 1 # 减少代码生成单元以提高优化效果

# WASM特定优化
[profile.release.package."*"]
opt-level = "s"
