[package]
name = "always-blue"
version = "0.1.0"
edition = "2021"

[features]
default = ["desktop"] #or wasm/desktop
desktop = ["open", "rodio"]
wasm = ["wasm-bindgen", "getrandom", "web-sys", "js-sys"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Common dependencies
rand = "0.8"
slint = "1.15.1"

# Desktop feature dependencies
open = { version = "5.0", optional = true }
rodio = { version = "0.17", optional = true }

# WASM feature dependencies
wasm-bindgen = { version = "0.2", optional = true }
getrandom = { version = "0.2.2", optional = true, features = ["js"] }
web-sys = { version = "0.3", optional = true, features = [
    "Window",
    "Document",
    "HtmlAudioElement",
    "console"
] }
js-sys = { version = "0.3", optional = true }

[build-dependencies]
slint-build = "1.15.1"

# WASM build requires cdylib type
[lib]
name = "always_blue_wasm"
path = "src/lib.rs"
crate-type = ["cdylib"]

# Optimize WASM size
[profile.release]
opt-level = "s"  # Optimize for size rather than speed
lto = true       # Link Time Optimization
debug = false    # Remove debug info
panic = "abort"  # Use abort instead of unwind
codegen-units = 1 # 减少代码生成单元以提高优化效果

# WASM特定优化
[profile.release.package."*"]
opt-level = "s"
